--- a/main.css
+++ b/main.css
@@ -9,3 +9,70 @@ body {
 	border-radius: 5px;
 	box-shadow: 0.5px 0.5px 2px 1px #eee;
 }
+
+
+.alert-box {
+    background: #b22747;
+    color: #ffffff;
+    padding: 20px;
+    border-radius: 5px;
+    display: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
